add form with checkboxes and styling

--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script src ="js/scripts.js" type="text/javascript"></script>
     <script src ="js/jquery-3.4.1.js" type="text/javascript"></script>
-    
+
     <title>Ultimate Test of Languages</title>
   </head>
   <body>
     <div class="container">
       <h1>Take this short quiz to determine which language best suits your future career.</h1>
-<form class="quiz" action="index.html" method="post">
+      <form class="quiz" action="index.html" method="post">
+      <label class="checkbox-inline">
+        ////////////check box 1
+        <h3>Select ONE of the following options that resinate with you:</h3>
+        <input type="checkbox" id="inlineCheckbox1" value="option1"> The sunshine is your friend.
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox2" value="option2"> You prefer no light...EVER!
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox3" value="option3"> You have sunglasses. Bring it, light!
+        </label>
+      ////////////checkbox 2
+      <label class="checkbox-inline">
+        <h3>Select ONE color you like the best:</h3>
+        <input type="checkbox" id="inlineCheckbox1" value="option1"><span id="orange">Orange</span>
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox2" value="option2"><span id="purple">Purple</span>
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox3" value="option3"><span id="green">Green</span>
+        </label>
 
+
+
+
+
+<button type="button" class="btn btn-primary btn-lg btn-block">FIND OUT YOUR RESULTS HERE!</button>
 
 </form>
     </div>
