--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
       <h1>Take this short quiz to determine which language best suits your future career.</h1>
       <form class="quiz" action="index.html" method="post">
+      <h3>Select ONE of the following options that resinate with you:</h3>
       <label class="checkbox-inline">
-        ////////////check box 1
-        <h3>Select ONE of the following options that resinate with you:</h3>
+
         <input type="checkbox" id="inlineCheckbox1" value="option1"> The sunshine is your friend.
         </label>
         <label class="checkbox-inline">
@@ -23,9 +23,9 @@
         <label class="checkbox-inline">
         <input type="checkbox" id="inlineCheckbox3" value="option3"> You have sunglasses. Bring it, light!
         </label>
-      ////////////checkbox 2
+      <h3>Select ONE color you like the best:</h3>
       <label class="checkbox-inline">
-        <h3>Select ONE color you like the best:</h3>
+
         <input type="checkbox" id="inlineCheckbox1" value="option1"><span id="orange">Orange</span>
         </label>
         <label class="checkbox-inline">
@@ -34,6 +34,31 @@
         <label class="checkbox-inline">
         <input type="checkbox" id="inlineCheckbox3" value="option3"><span id="green">Green</span>
         </label>
+      <h3>Select ONE of the three images below.</h3>
+      <label class="checkbox-inline">
+
+        <input type="checkbox" id="inlineCheckbox1" value="option1"><img src="img/alien.jpg" alt="oops! something went wrong!">
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox2" value="option2"> <img src="img/money.jpeg" alt="oops! something went wrong!">
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox3" value="option3"><img src="img/puzzle.png" alt="oops! something went wrong!">
+        </label>
+      <h3>Select ONE of the following drink options:</h3>
+      <label class="checkbox-inline">
+
+
+        <input type="checkbox" id="inlineCheckbox1" value="option1">Dirty Martini
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox2" value="option2">Coffee
+        </label>
+        <label class="checkbox-inline">
+        <input type="checkbox" id="inlineCheckbox3" value="option3">Arnold-Palmer Iced tea
+        </label>
+
+
 
 
 
