--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
       <form class="quiz" action="index.html" method="post">
 
-      <div class="question1">
+      <div class="jumbotron question1">
         <h3>Select ONE of the following options that resinate with you:</h3>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox1" value="option1"> The sunshine is your friend.
+        <input type="checkbox" id="friend" value="option1"> The sunshine is your friend.
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox2" value="option2"> You prefer no light...EVER!
+        <input type="checkbox" id="noLight" value="option2"> You prefer no light...EVER!
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox3" value="option3"> You have sunglasses. Bring it, light!
+        <input type="checkbox" id="light" value="option3"> You have sunglasses. Bring it, light!
         </label>
       </div>
 
-      <div class="question2">
+      <div class="jumbotron question2">
         <h3>Select ONE color you like the best:</h3>
         <label class="checkbox-inline">
         <input type="checkbox" id="inlineCheckbox1" value="option1"><span id="orange">Orange</span>
@@ -40,7 +40,7 @@
         </label>
       </div>
 
-      <div class="question3">
+      <div class="jumbotron question3">
         <h3>Select ONE of the three images below.</h3>
         <label class="checkbox-inline">
         <input type="checkbox" id="inlineCheckbox1" value="option1"><img src="img/alien.jpg" alt="oops! something went wrong!">
@@ -53,7 +53,7 @@
         </label>
       </div>
 
-      <div class="question4">
+      <div class="jumbotron question4">
         <h3>Select ONE of the following drink options:</h3>
         <label class="checkbox-inline">
         <input type="checkbox" id="inlineCheckbox1" value="option1">Dirty Martini
@@ -66,7 +66,7 @@
         </label>
       </div>
 
-      <div class="question5">
+      <div class="jumbotron question5">
         <h3>Select ONE of the following Televesion Shows that you like the most:</h3>
         <label class="checkbox-inline">
         <input type="checkbox" id="inlineCheckbox1" value="option1">"The Office""
