--- a/index.html
+++ b/index.html
@@ -17,71 +17,75 @@
       <div class="jumbotron question1">
         <h3>Select ONE of the following options that resinate with you:</h3>
         <label class="checkbox-inline">
-        <input type="checkbox" id="friend" value="option1"> The sunshine is your friend.
+        <input type="checkbox" id="light" value="option1"> The sunshine is your friend.
         </label>
         <label class="checkbox-inline">
         <input type="checkbox" id="noLight" value="option2"> You prefer no light...EVER!
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="light" value="option3"> You have sunglasses. Bring it, light!
+        <input type="checkbox" id="sunglasses" value="option3"> You have sunglasses. Bring it, light!
         </label>
       </div>
 
       <div class="jumbotron question2">
         <h3>Select ONE color you like the best:</h3>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox1" value="option1"><span id="orange">Orange</span>
+        <input type="checkbox" id="orange1" value="option1"><span id="orange">Orange</span>
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox2" value="option2"><span id="purple">Purple</span>
+        <input type="checkbox" id="purple2" value="option2"><span id="purple">Purple</span>
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox3" value="option3"><span id="green">Green</span>
+        <input type="checkbox" id="green3" value="option3"><span id="green">Green</span>
         </label>
       </div>
 
       <div class="jumbotron question3">
         <h3>Select ONE of the three images below.</h3>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox1" value="option1"><img src="img/alien.jpg" alt="oops! something went wrong!">
+        <input type="checkbox" id="alien" value="option1"><img src="img/alien.jpg" alt="oops! something went wrong!">
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox2" value="option2"> <img src="img/money.jpeg" alt="oops! something went wrong!">
+        <input type="checkbox" id="money" value="option2"> <img src="img/money.jpeg" alt="oops! something went wrong!">
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox3" value="option3"><img src="img/puzzle.png" alt="oops! something went wrong!">
+        <input type="checkbox" id="puzzle" value="option3"><img src="img/puzzle.png" alt="oops! something went wrong!">
         </label>
       </div>
 
       <div class="jumbotron question4">
         <h3>Select ONE of the following drink options:</h3>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox1" value="option1">Dirty Martini
+        <input type="checkbox" id="martini" value="option1">Dirty Martini
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox2" value="option2">Coffee
+        <input type="checkbox" id="coffee" value="option2">Coffee
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox3" value="option3">Arnold-Palmer Iced tea
+        <input type="checkbox" id="tea" value="option3">Arnold-Palmer Iced tea
         </label>
       </div>
 
       <div class="jumbotron question5">
         <h3>Select ONE of the following Televesion Shows that you like the most:</h3>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox1" value="option1">"The Office""
+        <input type="checkbox" id="office" value="option1">"The Office""
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox2" value="option2">"Impractical Jokers"
+        <input type="checkbox" id="jokers" value="option2">"Impractical Jokers"
         </label>
         <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox3" value="option3">"Game of Thrones"
+        <input type="checkbox" id="thrones" value="option3">"Game of Thrones"
         </label>
       </div>
 
-      <button type="button" class="btn btn-primary btn-lg btn-block">FIND OUT YOUR RESULTS HERE!</button>
+      <button type="submit" class="btn btn-primary btn-lg btn-block">FIND OUT YOUR RESULTS HERE!</button>
 
       </form>
+    <div class="">
+
+    </div>
+
     </div>
   </body>
 </html>
