--- a/index.html
+++ b/index.html
@@ -81,8 +81,17 @@
       <button type="submit" class="btn btn-primary btn-lg btn-block">FIND OUT YOUR RESULTS HERE!</button>
 
       </form>
-    <div class="">
+    <div id = "vampire">
+<h1><span id="warning"> WARNING:YOU MIGHT BE A VAMPIRE.</span></h1>
+  <ul>
+    <h1>Please remain locked in a coffin if you experiance the following:</h1>
+    <li>You have no reflection when looking in the mirror.</li>
+    <li>You are repulsed by garlic</li>
+    <li>You are nocturnal</li>
+    <li>You crave human blood</li>
+    <li>Your spirit animal is a bat</li>
 
+  </ul>
     </div>
 
     </div>
