add vampire page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Take this short quiz to determine which language best suits your future career.</h1>
+      <h1 class="quiz">Take this short quiz to determine which language best suits your future career.</h1>
 
       <form class="quiz" action="index.html" method="post">
 
@@ -82,9 +82,12 @@
     </form>
     </div>
     <div id = "vampire">
-      <h1><span id="warning"> WARNING:YOU MIGHT BE A VAMPIRE.</span></h1>
+       <h1>WARNING!</h1>
+       <br>
+       <h3>YOU MAY BE A VAMPIRE!</h3>
+       <img src="img/vampire.jpeg" alt="oops! Something went wrong!">
       <ul>
-        <h1>Please remain locked in a coffin if you experiance the following:</h1>
+        <h4>Please remain locked in a coffin if you experiance the following:</h4>
         <li>You have no reflection when looking in the mirror.</li>
         <li>You are repulsed by garlic</li>
         <li>You are nocturnal</li>
