--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
        <h1>WARNING!</h1>
        <br>
        <h3>YOU MAY BE A VAMPIRE!</h3>
-       <img src="img/vampire.jpeg" alt="oops! Something went wrong!">
+       <img class ="vampirePic" src="img/vampire.jpeg" alt="oops! Something went wrong!">
       <ul>
         <h4>Please remain locked in a coffin if you experiance the following:</h4>
         <li>You have no reflection when looking in the mirror.</li>
@@ -93,8 +93,8 @@
         <li>You are nocturnal</li>
         <li>You crave human blood</li>
         <li>Your spirit animal is a bat</li>
-
       </ul>
+      <button id="btn-vampire" type="submit" class="btn btn-danger">RETURN</button>
 
 
     </div>
