--- a/index.html
+++ b/index.html
@@ -15,66 +15,66 @@
 
       <div class="jumbotron question1">
         <h3>Select ONE of the following options that resinate with you:</h3>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="light" value="option1"> The sunshine is your friend.
+        <label class="r-sun">
+        <input type="radio" id="light" value="option1" name="sun"> The sunshine is your friend.
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="noLight" value="option2"> You prefer no light...EVER!
+        <label class="r-sun">
+        <input type="radio" id="noLight" value="option2" name="sun"> You prefer no light...EVER!
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="sunglasses" value="option3"> You have sunglasses. Bring it, light!
+        <label class="r-sun">
+        <input type="radio" id="sunglasses" value="option3" name="sun"> You have sunglasses. Bring it, light!
         </label>
       </div>
 
       <div class="jumbotron question2">
         <h3>Select ONE color you like the best:</h3>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="orange1" value="option1"><span id="orange">Orange</span>
+        <label class="r-colors">
+        <input type="radio" id="orange1" value="option1" name="colors"><span id="orange">Orange</span>
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="purple2" value="option2"><span id="purple">Purple</span>
+        <label class="r-colors">
+        <input type="radio" id="purple2" value="option2" name="colors"><span id="purple">Purple</span>
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="green3" value="option3"><span id="green">Green</span>
+        <label class="r-colors">
+        <input type="radio" id="green3" value="option3" name="colors"><span id="green">Green</span>
         </label>
       </div>
 
       <div class="jumbotron question3">
         <h3>Select ONE of the three images below.</h3>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="alien" value="option1"><img src="img/alien.jpg" alt="oops! something went wrong!">
+        <label class="r-images">
+        <input type="radio" id="alien" value="option1" name="images"><img src="img/alien.jpg" alt="oops! something went wrong!">
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="money" value="option2"> <img src="img/money.jpeg" alt="oops! something went wrong!">
+        <label class="r-images">
+        <input type="radio" id="money" value="option2" name="images"> <img src="img/money.jpeg" alt="oops! something went wrong!">
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="puzzle" value="option3"><img src="img/puzzle.png" alt="oops! something went wrong!">
+        <label class="r-images">
+        <input type="radio" id="puzzle" value="option3" name="images"><img src="img/puzzle.png" alt="oops! something went wrong!">
         </label>
       </div>
 
       <div class="jumbotron question4">
         <h3>Select ONE of the following drink options:</h3>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="martini" value="option1">Dirty Martini
+        <label class="r-drink">
+        <input type="radio" id="martini" value="option1" name ="drink" >Dirty Martini
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="coffee" value="option2">Coffee
+        <label class="r-drink">
+        <input type="radio" id="coffee" value="option2" name ="drink" >Coffee
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="tea" value="option3">Arnold-Palmer Iced tea
+        <label class="r-drink">
+        <input type="radio" id="tea" value="option3" name ="drink" >Arnold-Palmer Iced tea
         </label>
       </div>
 
       <div class="jumbotron question5">
         <h3>Select ONE of the following Televesion Shows that you like the most:</h3>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="office" value="option1">"The Office""
+        <label class="r-shows">
+        <input type="cradio" id="office" value="option1" name="shows">"The Office"
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="jokers" value="option2">"Impractical Jokers"
+        <label class="r-shows">
+        <input type="radio" id="jokers" value="option2" name="shows">"Impractical Jokers"
         </label>
-        <label class="checkbox-inline">
-        <input type="checkbox" id="thrones" value="option3">"Game of Thrones"
+        <label class="r-shows">
+        <input type="radio" id="thrones" value="option3" name="shows">"Game of Thrones"
         </label>
       </div>
 
