fix option 1 error

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="jumbotron question5">
         <h3>Select ONE of the following Televesion Shows that you like the most:</h3>
         <label class="r-shows">
-        <input type="cradio" id="office" value="option1" name="shows">"The Office"
+        <input type="radio" id="office" value="option1" name="shows">"The Office"
         </label>
         <label class="r-shows">
         <input type="radio" id="jokers" value="option2" name="shows">"Impractical Jokers"
