fix typo and layout of vampire page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="jumbotron question1">
           <h3>Select ONE of the following options that resinate with you:</h3>
           <label class="r-sun">
-          <input type="radio" id="light" value="option1" name="sun"> The sunshine is your friend.
-          </label>
+          <input type="radio" id="light" value="option1" name="sun"> The sunshine is your friend.&nbsp;
+          </label>&nbsp;
           <label class="r-sun">
-          <input type="radio" id="noLight" value="option2" name="sun"> You prefer no light...EVER!
-          </label>
+          <input type="radio" id="noLight" value="option2" name="sun">You prefer no light...EVER!&nbsp;
+          </label>&nbsp;
           <label class="r-sun">
           <input type="radio" id="sunglasses" value="option3" name="sun"> You have sunglasses. Bring it, light!
           </label>
@@ -27,11 +27,11 @@
         <div class="jumbotron question2">
           <h3>Select ONE color you like the best:</h3>
           <label class="r-colors">
-          <input type="radio" id="orange1" value="option1" name="colors"><span id="orange">Orange</span>
-          </label>
+          <input type="radio" id="orange1" value="option1" name="colors"><span id="orange">Orange</span>&nbsp;
+          </label>&nbsp;
           <label class="r-colors">
-          <input type="radio" id="purple2" value="option2" name="colors"><span id="purple">Purple</span>
-          </label>
+          <input type="radio" id="purple2" value="option2" name="colors"><span id="purple">Purple</span>&nbsp;
+          </label>&nbsp;
           <label class="r-colors">
           <input type="radio" id="green3" value="option3" name="colors"><span id="green">Green</span>
           </label>
@@ -53,11 +53,11 @@
         <div class="jumbotron question4">
           <h3>Select ONE of the following drink options:</h3>
           <label class="r-drink">
-          <input type="radio" id="martini" value="option1" name ="drink" >Dirty Martini
-          </label>
+          <input type="radio" id="martini" value="option1" name ="drink" >Dirty Martini&nbsp;
+          </label>&nbsp;
           <label class="r-drink">
-          <input type="radio" id="coffee" value="option2" name ="drink" >Coffee
-          </label>
+          <input type="radio" id="coffee" value="option2" name ="drink" >Coffee&nbsp;
+          </label>&nbsp;
           <label class="r-drink">
           <input type="radio" id="tea" value="option3" name ="drink" >Arnold-Palmer Iced tea
           </label>
@@ -66,13 +66,13 @@
         <div class="jumbotron question5">
           <h3>Select ONE of the following Televesion Shows that you like the most:</h3>
           <label class="r-shows">
-          <input type="radio" id="office" value="option1" name="shows">"The Office"
+          <input type="radio" id="office" value="option1" name="shows">&nbsp;"The Office"&nbsp;
           </label>
           <label class="r-shows">
-          <input type="radio" id="jokers" value="option2" name="shows">"Impractical Jokers"
+          <input type="radio" id="jokers" value="option2" name="shows">&nbsp;"Impractical Jokers"&nbsp;
           </label>
           <label class="r-shows">
-          <input type="radio" id="thrones" value="option3" name="shows">"Game of Thrones"
+          <input type="radio" id="thrones" value="option3" name="shows">&nbsp;"Game of Thrones"
           </label>
         </div>
 
@@ -90,7 +90,7 @@
 
          <div class="vampireList">
           <ul>
-            <h4><strong>Please remain locked in a coffin if you experiance the following:</strong></h4>
+            <h4><strong>Please remain locked in a coffin if you experience the following:</strong></h4>
             <br>
             <li>You have no reflection when looking in the mirror.</li>
             <li>You are repulsed by garlic</li>
