make final changes to spelling

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <button type="submit" class="btn btn-return">Return to the form!</button>
       </div>
       <div id="hiddenRuby">
-        <h1>Based on your resukts, we recoomend you try the language Ruby!</h1>
+        <h1>Based on your results, we recommend you try the language Ruby!</h1>
         <button type="submit" class="btn btn-return">Return to the form!</button>
       </div>
     </div>
